# nexus-web

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Hyperion (Hyperion Cantos) -- Simmons, Dan -- Hyperion Cantos, 1, 2017;2011 -- Del Rey;Random House Worlds -- isbn13 9780399178610 -- 5cc2fdada3cb44ba29b7654ca0909bab -- Anna’s Archive.epub  Makefile  README.md  agency.json  boundaries.md  codebase.md  deployment.md  effect-services.md  effect.md  errors.md  function-parameters.md  generated-text.md  index.md  json-values.md  keys-and-identities.md  mutation-ordering.md  naming.md  overrides.md  resource-lifecycle.md  retries.md  simplicity.md  testing.md  timing.md  tmp.md
python/: README.md  pyproject.toml
python/nexus/: __init__.py  app.py  celery.py  celery_contract.py  cli.py  coerce.py  config.py  errors.py  evidence_span_ids.py  hashing.py  ids.py  llm_catalog.py  logging.py  public_resource_security.py  responses.py  retry_after.py  stream_paths.py  text.py  timestamps.py  web_paths.py
python/nexus/api/: __init__.py  deps.py  query_params.py
python/nexus/auth/: __init__.py  bearer.py  extension.py  middleware.py  permissions.py  principals.py  stream_token.py  verifier.py
python/nexus/db/: __init__.py  engine.py  errors.py  listen.py  models.py  retries.py  session.py  sql_patterns.py
python/nexus/jobs/: __init__.py  queue.py  registry.py  worker.py
python/nexus/middleware/: __init__.py  db_session.py  request_id.py  stream_cors.py
python/nexus/ops/: __init__.py  entitlement_overrides.py  resource_sharing_smoke_fixture.py
python/nexus/oracle/: seed_objects.py
python/nexus/schemas/: __init__.py  artifact.py  atlas.py  attention.py  billing.py  chat_reader_selection.py  citation.py  command_palette.py  consumption.py  context_memory.py  contributors.py  conversation.py  highlights.py  ingest.py  keys.py  library.py  library_intelligence.py  llm.py  media.py  models.py  notes.py  oracle.py  playback.py  podcast.py  presence.py  public_resource_sharing.py  queue.py  reader.py  reader_apparatus.py  reader_document_map.py  resonance.py  resource_graph.py  resource_items.py  resource_sharing.py  resource_targets.py  retrieval.py  search.py  synapse.py  telemetry.py  user.py  (+2 more)
python/nexus/services/: __init__.py  _contributor_credit_writes.py  _contributor_identity.py  _contributor_replay.py  api_key_resolver.py  atlas_projection.py  attention.py  auth_handoff_codes.py  billing.py  billing_entitlements.py  bootstrap.py  browse.py  canonicalize.py  capabilities.py  chat_context_refs.py  chat_failure.py  chat_prompt.py  chat_quote.py  chat_reader_selection.py  chat_reruns.py  chat_retrieval_plan.py  chat_run_access.py  chat_run_artifact_persistence.py  chat_run_artifact_refs.py  chat_run_citations.py  chat_run_claim_parsing.py  chat_run_event_store.py  chat_run_evidence.py  chat_run_evidence_locators.py  chat_run_finalize.py  chat_run_idempotency.py  chat_run_message_blocks.py  chat_run_message_prep.py  chat_run_prompt_tracking.py  chat_run_response.py  chat_run_scope.py  chat_run_singletons.py  chat_run_tools.py  chat_run_usage.py  chat_run_validation.py  (+174 more)
python/nexus/storage/: __init__.py  client.py  paths.py  read.py
python/nexus/tasks/: __init__.py  artifacts.py  atlas_project.py  backfill_default_library_closure.py  chat_run.py  contributor_reconciliation.py  dawn_write.py  enrich_metadata.py  ingest_epub.py  ingest_media_source.py  ingest_pdf.py  ingest_web_article.py  ingest_youtube_video.py  library_intelligence.py  llm_task.py  media_teardown.py  media_unit_build.py  note_reindex.py  oracle_reading.py  page_reindex.py  podcast_active_subscription_poll.py  podcast_reindex_semantic.py  podcast_sync_subscription.py  podcast_transcribe_episode.py  prune_background_jobs.py  purge_expired_auth_handoff_codes.py  reconcile_stale_ingest_media.py  storage_object_cleanup.py  storage_orphan_sweep.py  sweep_pending.py  synapse_scan.py  sync_gutenberg_catalog.py
python/scripts/: backfill_note_content_index.py  backfill_page_content_index.py  ensure_oracle_seed_objects.py  generate_reader_apparatus_frontend_payloads.py  remediate_reader_selection_backfill.py  repair_oracle_plate_storage_keys.py  seed_e2e_data.py  seed_e2e_pdf.py  seed_oracle_plate_e2e.py  seed_real_media_e2e.py  supabase_auth_config.py  verify_celery_contract.py
python/tests/: __init__.py  conftest.py  factories.py  fixtures.py  helpers.py  image_fixtures.py  note_document_helpers.py  reader_apparatus_assertions.py  reader_apparatus_corpus.py  reader_apparatus_epub_verifiers.py  reader_apparatus_frontend_payloads.py  reader_apparatus_gold_graph.py  reader_apparatus_latex_verifiers.py  reader_apparatus_pdf_verifiers.py  reader_apparatus_tei_verifiers.py  reader_apparatus_web_verifiers.py  test_agent_app_search.py  test_agent_tool_schema_subset.py  test_agent_web_search.py  test_agent_writes.py  test_atlas.py  test_atlas_projection.py  test_attached_citations.py  test_attention.py  test_auth.py  test_auth_handoff_codes.py  test_author_deduplication_cutover.py  test_author_races.py  test_bff_smoke.py  test_billing.py  test_billing_entitlement_overrides.py  test_brave_search_provider.py  test_browse.py  test_browse_cursor.py  test_canonicalize.py  test_capabilities.py  test_chat_failure.py  test_chat_prompt.py  test_chat_references_routes.py  test_chat_retrieval_plan.py  (+279 more)
python/tests/fixtures/: evidence_indexing_smoke_eval.json  resonance_semantic_calibration.json  sample_transcript.json  sample_transcript.srt  sample_transcript.txt  sample_transcript.vtt  search_retrieval_evals.json  youtube_transcript_probe_samples.json
python/tests/live_providers/: test_embedding_provider_live.py  test_podcast_episode_live.py  test_search_rerank_live_eval.py  test_video_transcript_live.py  test_web_url_ingest_live.py  test_x_author_thread_live.py
python/tests/real_media/: assertions.py  conftest.py  test_context_chat_trace.py  test_exports_trace.py  test_ingest_index_trace.py  test_no_internal_mocks.py  test_pdf_epub_evidence.py  test_reader_apparatus.py  test_reingest_delete_permissions.py  (+1 more)
(+3254 files in other folders)
